--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,5 +87,5 @@ if (${ENABLE_TESTS})
         )
         FetchContent_MakeAvailable (Catch2)
     endif ()
-    #    add_subdirectory (tests)
+    add_subdirectory (tests)
 endif (${ENABLE_TESTS})
