updated codecov action

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -48,9 +48,10 @@ jobs:
         ctest --output-on-failure
 
     - name: Send coverage report
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+        slug: mochi-hpc/mofka-api
         fail_ci_if_error: true
         verbose: true
         gcov: true
