added mechanics to build the code using pip

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,16 +1,17 @@
-add_library (pymofka_api MODULE py-mofka-api.cpp)
-target_link_libraries (pymofka_api PRIVATE pybind11::module mofka-api PRIVATE coverage_config)
-pybind11_extension (pymofka_api)
-pybind11_strip (pymofka_api)
-
-set (PY_MOFKA_TARGETS pymofka_api)
+pybind11_add_module (pymofka_api py-mofka-api.cpp)
+target_link_libraries (pymofka_api PRIVATE mofka-api coverage_config)
 
 set (PY_VERSION ${Python3_VERSION_MAJOR}.${Python3_VERSION_MINOR})
 
-install (TARGETS ${PY_MOFKA_TARGETS}
-         EXPORT mofka-api-targets
-         ARCHIVE DESTINATION lib/python${PY_VERSION}/site-packages
-         LIBRARY DESTINATION lib/python${PY_VERSION}/site-packages)
-
-#install (DIRECTORY mochi/mofka
-#        DESTINATION lib/python${PY_VERSION}/site-packages/mochi)
+if (NOT DEFINED SKBUILD_PROJECT_NAME)
+    install (TARGETS pymofka_api
+             EXPORT mofka-api-targets
+             ARCHIVE DESTINATION lib/python${PY_VERSION}/site-packages
+             LIBRARY DESTINATION lib/python${PY_VERSION}/site-packages)
+    install (DIRECTORY mochi/mofka
+             DESTINATION lib/python${PY_VERSION}/site-packages/mochi)
+else ()
+    install (TARGETS pymofka_api DESTINATION .)
+    install (DIRECTORY mochi
+             DESTINATION .)
+endif ()
