--- a/src/diaspora-stream-api-config.cmake.in
+++ b/src/diaspora-stream-api-config.cmake.in
@@ -14,4 +14,4 @@ include (CMakeFindDependencyMacro)
 find_dependency (nlohmann_json)
 find_dependency (nlohmann_json_schema_validator)
 
-include ("${CMAKE_CURRENT_LIST_DIR}/diaspora-api-targets.cmake")
+include ("${CMAKE_CURRENT_LIST_DIR}/diaspora-stream-api-targets.cmake")
