changed target of codecov report

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -51,7 +51,7 @@ jobs:
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        slug: mochi-hpc/mofka-api
+        slug: diaspora-project/diaspora-stream-api
         fail_ci_if_error: true
         verbose: true
         gcov: true
