--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,8 +1,17 @@
-# Add benchmark executable
+# Add benchmark executables
 add_executable (diaspora-producer-benchmark diaspora-producer-benchmark.cpp)
+add_executable (diaspora-consumer-benchmark diaspora-consumer-benchmark.cpp)
 
 # Link libraries
 target_link_libraries (diaspora-producer-benchmark
-    PRIVATE diaspora-stream-api
+    PRIVATE
+        diaspora-stream-api
+        MPI::MPI_CXX
+)
+
+target_link_libraries (diaspora-consumer-benchmark
+    PRIVATE
+        diaspora-stream-api
+        MPI::MPI_CXX
 )
 target_include_directories (diaspora-producer-benchmark PRIVATE ${TCLAP_INCLUDE_PATH})
