added installation of benchmark binaries

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -16,3 +16,6 @@ target_link_libraries (diaspora-consumer-benchmark
 )
 target_include_directories (diaspora-producer-benchmark PRIVATE ${TCLAP_INCLUDE_PATH})
 target_include_directories (diaspora-consumer-benchmark PRIVATE ${TCLAP_INCLUDE_PATH})
+
+install (TARGETS diaspora-producer-benchmark diaspora-consumer-benchmark
+         DESTINATION bin)
