--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -41,7 +41,7 @@ jobs:
         cd build
         cmake .. -DENABLE_COVERAGE=ON \
                  -DENABLE_TESTS=ON \
-                 -DENABLE_EXAMPLES=ON \
+                 -DENABLE_BENCHMARKS=ON \
                  -DENABLE_PYTHON=ON \
                  -DCMAKE_BUILD_TYPE=Debug
         make
