--- a/tests/spack.yaml
+++ b/tests/spack.yaml
@@ -7,7 +7,7 @@ spack:
   - py-pybind11
   - catch2
   - tclap
-  - mpi
+  - mpich
   concretizer:
     unify: true
     reuse: true
@@ -20,8 +20,6 @@ spack:
       require: "@3.6.0:"
     nlohmann-json-schema-validator:
       require: "@2.3.0:"
-    mpi:
-      require: mpich
   mirrors:
     mochi-buildcache:
       url: oci://ghcr.io/mochi-hpc/mochi-spack-buildcache
