--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -1,26 +1,32 @@
-# Diaspora FIFO Daemon executable
+# Diaspora Control Tool executable (includes FIFO daemon)
 
-# Create the executable
-add_executable (diaspora-fifo diaspora-fifo.cpp)
+# Create the executable from multiple source files
+add_executable (diaspora-ctl
+    diaspora-ctl/main.cpp
+    diaspora-ctl/common.cpp
+    diaspora-ctl/topic_commands.cpp
+    diaspora-ctl/fifo_commands.cpp
+)
 
 # Link against the diaspora-stream-api library and dependencies
 # Use spdlog header-only mode
-target_link_libraries (diaspora-fifo
+target_link_libraries (diaspora-ctl
     diaspora-stream-api
     spdlog::spdlog_header_only
 )
 
 # Include directories
-target_include_directories (diaspora-fifo
+target_include_directories (diaspora-ctl
     PRIVATE ${TCLAP_INCLUDE_PATH}
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/diaspora-ctl
 )
 
 # Apply coverage and warnings configurations
-target_link_libraries (diaspora-fifo
+target_link_libraries (diaspora-ctl
     coverage_config
     warnings_config
 )
 
 # Install the executable
-install (TARGETS diaspora-fifo
+install (TARGETS diaspora-ctl
          RUNTIME DESTINATION bin)
