added two implementations of a ThreadPool and added tests for them

--- a/tests/spack.yaml
+++ b/tests/spack.yaml
@@ -9,6 +9,10 @@ spack:
   - tclap
   - mpich
   - spdlog
+  - mochi-thallium
+  repos:
+    mochi:
+      git: https://github.com/mochi-hpc/mochi-spack-packages.git
   concretizer:
     unify: true
     reuse: true
