--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -36,6 +36,7 @@ configure_file (diaspora-run-tests.sh diaspora-run-tests.sh USE_SOURCE_PERMISSIO
 configure_file (files-driver-pre-test.sh files-driver-pre-test.sh USE_SOURCE_PERMISSIONS COPYONLY)
 configure_file (files-driver-post-test.sh files-driver-post-test.sh USE_SOURCE_PERMISSIONS COPYONLY)
 configure_file (files-driver-run-benchmark.sh files-driver-run-benchmark.sh USE_SOURCE_PERMISSIONS COPYONLY)
+configure_file (test-diaspora-ctl.sh test-diaspora-ctl.sh USE_SOURCE_PERMISSIONS COPYONLY)
 
 if (ENABLE_PYTHON)
 
@@ -80,3 +81,10 @@ set_property (TEST DiasporaFilesDriverBenchmark PROPERTY
               ENVIRONMENT
               "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/src:$ENV{LD_LIBRARY_PATH}"
               "PYTHONPATH=${CMAKE_SOURCE_DIR}/python/:${CMAKE_BINARY_DIR}/python:$ENV{PYTHONPATH}")
+
+add_test (NAME DiasporaCtlTest COMMAND
+          ${CMAKE_CURRENT_BINARY_DIR}/test-diaspora-ctl.sh)
+set_property (TEST DiasporaCtlTest PROPERTY
+              ENVIRONMENT
+              "PATH=$ENV{PATH}:${CMAKE_BINARY_DIR}/bin"
+              "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/src:$ENV{LD_LIBRARY_PATH}")
